# parkee-interview

./: CMakeLists.txt  Dockerfile  Makefile  README.md  parkee-qt  parkee-receiver  parkee-sender  parkee-tui
apps/qt/: Action.cpp  Action.h  CMakeLists.txt  Chart.cpp  Chart.h  Graph.cpp  Graph.h  Plot.cpp  Plot.h  PortSettingsDialog.cpp  PortSettingsDialog.h  PortsInfoDialog.cpp  PortsInfoDialog.h  SerialTransceiver.cpp  SerialTransceiver.h  ShowLog.cpp  ShowLog.h  TextWidget.cpp  TextWidget.h  ThemeInfo.h  main.cpp  mainwindow.cpp  mainwindow.h
apps/receiver/: CMakeLists.txt  main.cpp
apps/sender/: CMakeLists.txt  main.cpp
apps/tui/: Backend.cpp  CMakeLists.txt  Canvas.cpp  DataCollection.cpp  EventHandler.cpp  Popup.cpp  RawData.cpp  Tab.cpp  main.cpp
cmake/: delameta.cmake
include/parkee-interview/: lrc.h  payload.h  sync_deque.h
src/: lrc.cpp  payload.cpp  sync_deque.cpp
tests/: CMakeLists.txt  lrc.cpp  payload.cpp
